--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ a {
       View the featured proposal:
 <br>
       <a href="https://docs.google.com/document/d/1ulJ1RZhZhm44bU1EiIPKBf90DhhpLEav/edit?usp=sharing&ouid=105898037888856856512&rtpof=true&sd=true" target="_blank">
-        Strategic Ethics Framework – PDF
+        Strategic Ethics Framework OpenAI– PDF
       
 </a>
     </p>
