--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ a {
 </head>
 <body>
   <div class="container">
-    <img src="Xlogo.jpg" alt="X Prism Logo" class="logo">
+    <img src="Xlogo2.png" alt="X Prism Logo" class="logo">
 
     <h1>A pseudonymous strategist<br>focused on structural solutions.</h1>
 
